--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -27,7 +27,21 @@ button {
   border-radius: 0.2rem;
   text-transform: uppercase;
   font-weight: 500;
-  padding: 0.6rem;
+
+  font-size: 0.7rem;
+  padding: 0.5rem;
+
+  @include b.desktop {&{
+    font-size: 1rem;
+    padding: 0.6rem;
+  }}
+}
+
+button.button-with-icon {
+  display: flex;
+  flex-flow: row;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
@@ -36,5 +50,15 @@ h1 {
 
   @include b.desktop {&{
     font-size: 2.3rem;
+  }}
+}
+
+.material-symbols-outlined {
+  height: 1rem;
+  margin-top: -0.3rem;
+  transform: scale(0.8);
+
+  @include b.desktop {&{
+    transform: none;
   }}
 }
